# anomale

./: README.md
anomale/: install.sh
anomale/thestuff/: aurlist.txt
anomale/thestuff/.cache/anomale/: last.txt
anomale/thestuff/.cache/wal/: Colors.hs  btopwal.theme  colors  colors--nodim-alacritty.yml  colors-alacritty.toml  colors-alacritty.yml  colors-flow.xaml  colors-foot-dark.ini  colors-foot-light.ini  colors-foot.ini  colors-fuzzel.ini  colors-hyprland.conf  colors-kitty.conf  colors-konsole.colorscheme  colors-leftwm-theme.ron  colors-mako  colors-nqq.css  colors-oomox  colors-polybar  colors-putty.reg  colors-retroarch.cfg  colors-rgb  colors-rio.toml  colors-rofi-dark.rasi  colors-rofi-light.rasi  colors-sway  (+37 more)
anomale/thestuff/anomalous/: Button.qml  ComboBox.qml  LayoutBox.qml  Main.qml  PasswordBox.qml  TextBox.qml  theme.conf
anomale/thestuff/etc/: sddm.conf
anomale/thestuff/shell/: Cargo.toml  config.conf  menus.conf  notifications.conf  package.sh  scratch_check.rs
anomale/thestuff/shell/src/: action_menu.rs  apps.rs  bar.rs  config.rs  layout.rs  main.rs  notification_window.rs  notify.rs  notify_server.rs  tray.rs  wallpapers.rs  watcher.rs
anomale/thestuff/shell/src/modules/: mod.rs
anomale/thestuff/shell/src/modules/battery/: mod.rs  style.css
anomale/thestuff/shell/src/modules/clock/: mod.rs  style.css
anomale/thestuff/shell/src/modules/resources/: mod.rs  style.css
anomale/thestuff/shell/src/modules/tags/: mod.rs  style.css
anomale/thestuff/shell/src/modules/volume/: mod.rs  style.css
anomale/thestuff/wallpaper/: 1192311.txt
(+68 files in other folders)
