[package]
name = "anomale"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
pulsectl-rs = "0.3.2"
libpulse-binding = "2.30.1"
async-channel = "2.5.0"
sysinfo = "0.30"
nvml-wrapper = "0.10"
notify = "6.1.1"
clap = { version = "4.5", features = ["derive"] }
zbus = "4.0"
zvariant = "4.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.25.0"
